// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Divider > should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<hr
  class="rmd-divider"
  role="separator"
/>
`;

exports[`Divider > should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<hr
  class="rmd-divider custom-class-name"
  role="separator"
  style="color: blue;"
/>
`;

exports[`Divider > should apply the correct styling, HTML attributes, and allow a ref 3`] = `
<hr
  class="rmd-divider rmd-divider--inset"
  role="separator"
  style=""
/>
`;

exports[`Divider > should be able to render vertically 1`] = `
<div
  class="rmd-divider rmd-divider--vertical"
  role="separator"
/>
`;

exports[`Divider > should be able to render vertically 2`] = `
<div
  class="rmd-divider rmd-divider--vertical custom-class-name"
  role="separator"
  style="color: blue;"
/>
`;

exports[`Divider > should be able to render vertically 3`] = `
<div
  class="rmd-divider rmd-divider--vertical"
  role="separator"
  style=""
/>
`;

exports[`Divider > styling utility class > should be callable without any arguments 1`] = `"rmd-divider"`;
